# sv-menu

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docker/: Dockerfile  docker-compose.yml
src/sv_menu/: cache_service.py  cli.py  client.py  scraper.py  sv_menu.py  types.py  ui.py
