[project]
name = "sv-menu"
version = "0.1.0"
description = ""
authors = [
    {name = "antho",email = "bouillant.anthony@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "sv_menu", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
